# insilico_design_pipeline

./: cleanup.sh  pyproject.toml  setup.sh
config/: default.yaml
pipeline/novelty/: base.py
